--- a/package.json
+++ b/package.json
@@ -21,10 +21,7 @@
   "files": [
     "lib"
   ],
-  "author": "haoxin",
-  "contributors": [
-    "Bogdan Chadkin <trysound@yandex.ru>"
-  ],
+  "author": "yiyangzhang",
   "license": "MIT",
   "devDependencies": {
     "gulp": "^3.9.0",
